# call-server

./: .gitignore  README.md  requirements.md
docs/: adding-asr-provider.md  adding-llm-provider.md  adding-tts-provider.md  config-reference.md  deployment.md  implementation-notes.md  provider-architecture.md  session-interruption.md  testing.md  websocket-api.md
examples/: config-cloud.yaml  config-local.yaml  config-mock.yaml  config-vllm.yaml  sample-transcript.json  seed-prompts.yaml  seed-voices.yaml
go/: go.mod  go.sum
py/provider_gateway/: main.py  pyproject.toml  requirements.txt
py/provider_gateway/app/: __init__.py  __main__.py
py/provider_gateway/app/config/: __init__.py  settings.py
py/provider_gateway/app/core/: __init__.py  base_provider.py  capability.py  errors.py  registry.py
py/provider_gateway/app/grpc_api/: __init__.py  asr_servicer.py  llm_servicer.py  provider_servicer.py  server.py  tts_servicer.py
py/provider_gateway/app/models/: __init__.py  asr.py  common.py  llm.py  tts.py
py/provider_gateway/app/providers/asr/: __init__.py  faster_whisper.py  google_speech.py  mock_asr.py
py/provider_gateway/app/providers/llm/: __init__.py  groq.py  mock_llm.py  openai_compatible.py
py/provider_gateway/app/providers/tts/: __init__.py  google_tts.py  mock_tts.py  xtts.py
py/provider_gateway/app/providers/vad/: __init__.py  base.py  energy_vad.py
py/provider_gateway/app/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
py/provider_gateway/app/tests/: conftest.py  test_config.py  test_mock_providers.py  test_registry.py
(+177 files in other folders)
